# muke

./: .gitignore  1-demo_edit.sh  2-summarize.sh  README.md  pyproject.toml
algo/: __init__.py
algo/WISE/: utils.py  wise_hparams.py  wise_main.py
algo/memit/: compute_z.py  memit_main.py
algo/memit_ARE/: compute_z.py  memit_ARE_main.py
algo/memit_Mat/: __init__.py  compute_z.py  memit_Mat_hparams.py  memit_Mat_main.py
algo/unke/: __init__.py  compute_z.py  unke_hparams.py  unke_main.py
algo/unke_ARE/: __init__.py  compute_z.py  unke_ARE_hparams.py  unke_ARE_main.py
algo/unke_Mat/: __init__.py  compute_z.py  unke_Mat_hparams.py  unke_Mat_main.py
dataset_classes/: __init__.py  counterfact.py  editevery.py  hallucination.py  mquake.py  templates.py  test_templates.py  unke.py
experiments/: evaluate_uns.py  summarize_uns.py
hparams/MEMIT_Mat/: Llama3-8B-Instruct.json  Qwen2.5-7B-Instruct.json
hparams/WISE/: llama3-8b.yaml  qwen2.5-7b.yaml
hparams/unke_Mat/: Llama3-8B-Instruct.json  Qwen2.5-7B-Instruct-matryoshka.json  Qwen2.5-7B-Instruct.json
util/: globals.py  layer_stats.py  matryoshka.py
