[project]
name = "muke"
version = "0.1.0"
description = "muKE: Matryoshka Unstructured Knowledge Editing of Large Language Models"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "datasets==3.6.0",
    "nltk==3.9.1",
    "numpy==2.2.6",
    "rouge==1.0.1",
    "sentence-transformers==4.1.0",
    "torch==2.7.0",
    "transformers==4.53.3",
]
